openshift/gogs/gogs-buildconfig.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: gogs
    name: gogs
  spec:
    dockerImageRepository: docker.io/gogs/gogs
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: gogs
    name: gogs
  spec:
    replicas: 1
    selector:
      app: gogs
      deploymentconfig: gogs
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: gogs
          deploymentconfig: gogs
      spec:
        containers:
        - image: docker.io/gogs/gogs
          name: gogs
          ports:
          - containerPort: 22
            protocol: TCP
          - containerPort: 3000
            protocol: TCP
          resources: {}
          volumeMounts:
          - mountPath: /data
            name: gogs-volume
        volumes:
        - name: gogs-volume
          persistentVolumeClaim:
            claimName: gogs-volume
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - gogs
        from:
          kind: ImageStreamTag
          name: gogs:latest
      type: ImageChange
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: gogs
    name: gogs
  spec:
    ports:
    - name: 22-tcp
      port: 22
      protocol: TCP
      targetPort: 22
    - name: 3000-tcp
      port: 3000
      protocol: TCP
      targetPort: 3000
    selector:
      app: gogs
      deploymentconfig: gogs
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    labels:
      app: gogs
    name: gogs-volume
  spec:
    accessModes:
      - ReadWriteOnce
      - ReadWriteMany
    resources:
      requests:
        storage: 5Gi
- apiVersion: v1
  kind: Route
  metadata:
    creationTimestamp: null
    labels:
      app: gogs
    name: gogs
  spec:
    host: ""
    port:
      targetPort: 22-tcp
      targetPort: 80-tcp
      targetPort: 443-tcp
    to:
      name: gogs
  status:
    ingress: null
kind: List
metadata: {}
